# gst_npreader

./: README.md  autogen.sh  configure.ac
debian/: changelog  control
plugins/: Makefile.am  ixgnpreader.c  ixgnpreader.h
