plugin_LTLIBRARIES = libixgnpreader.la

# sources used to compile this plug-in
libixgnpreader_la_SOURCES = ixgnpreader.c ixgnpreader.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libixgnpreader_la_CFLAGS = $(GST_CFLAGS)
libixgnpreader_la_LIBADD = $(GST_LIBS)
libixgnpreader_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

